Fix overflow in navbar for tippy

--- a/resources/public/css/_navbar.scss
+++ b/resources/public/css/_navbar.scss
@@ -20,6 +20,7 @@
   @extend .panel-white;
   @extend .schnaq-navbar-skeleton;
   background: vars.$white;
+  overflow: visible;
   padding: 0;
 }
 
